# MagmaFS

./: .gitignore  README.md
libmagma/: Makefile  Makefile.am  Makefile.in  NOTE  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.ac  libmagma.h  libtool
libmagma/docs/: Doxyfile  distributing_files.txt  mount_protocol.txt
libmagma/docs/latex/: doxygen.sty  refman.tex
libmagma/libmagma/: Makefile  Makefile.am  debug.h  magma.h  magma_setup.h  net_layer.c  net_layer.h  routing.c  sha1.c  sha1.h  utils.c  utils.h  vulcano.c  vulcano.h
libmagma/libmagma/flare_system/: acl.c  balance.c  magma_flare.c  magma_flare.h  magma_flare_internals.c  magma_flare_internals.h  magma_flare_types.h  server_flare.c  server_node.c  sql.c
libmagma/libmagma/protocol/: protocol.c  protocol.h  protocol_pkt.c  protocol_pkt.h
libmagma/libmagma/protocol/balancer/: protocol_balancer.h
libmagma/libmagma/protocol/console/: protocol_console.c  protocol_console.h
libmagma/libmagma/protocol/flare/: chmod.c  chown.c  commons.c  getattr.c  mkdir.c  mknod.c  open.c  protocol_flare.h  read.c  readdir.c  readlink.c  rename.c  rmdir.c  statfs.c  symlink.c  truncate.c  unlink.c  utime.c  write.c
libmagma/libmagma/protocol/node/: protocol_node.c  protocol_node.h
libmagma/libmagma/t/: Makefile  Makefile.am  Makefile.in  magma_test.h
libmagma/libmagma/t/001.FLARE/: Makefile  Makefile.am  Makefile.in  block_flare.c  char_flare.c  destroy_flare.c  dir_flare.c  fifo_flare.c  file_flare.c  flare_create.c  symlink_flare.c
libmagma/libmagma/t/002.CACHE/: Makefile  Makefile.am  Makefile.in  add_remove.c
libmagma/libmagma/t/005.DIR/: Makefile  Makefile.am  Makefile.in  Session.vim  basic_add_and_remove.c  generic.c  page_size_check.c
libmagma/libmagma/t/020.UTILS/: Makefile  Makefile.am  Makefile.in  xnetstrcpy.c
libmagma/libmagma/t/other/: dirent.c  fusexmp.c  int_val.c  key_arithmetics.c  key_match.c  key_val.c  sha1.c  sha1_aton.c  stat.c
libmagma/wireshark/: magma_dissector.c
magma_tools/: COPYING  Makefile  Makefile.in  README  autogen.sh  config.h  config.status  configure  configure.ac  configure.ac.barebone  configure.ac.test
magma_tools/src/: Makefile  Makefile.am  Makefile.in  ls.c
magmad/: Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.ac  libtool
magmad/src/: Makefile  Makefile.am  Makefile.in  magmad.c  magmad.h  mount.h  mount_svc.c  mount_xdr.c  nfs.c  nfs_prot.h  nfs_prot_svc.c  nfs_prot_xdr.c  parseargs.c  protocol_mount.c  protocol_nfs.c
mount.magma/: ChangeLog  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  libtool
mount.magma/src/: Makefile  Makefile.am  Makefile.in  mount.magma.c
