CFLAGS=-I../../src/ -D_DEBUG_STDERR -Wall $(GLIB_CFLAGS)
LDFLAGS=-lm -lpthread -lssl $(GLIB_LIBS)

### bin_PROGRAMS = add_remove
### 
### add_remove_SOURCES = add_remove.c ../magma_test.h ../../parseargs.c ../../sha1.c ../../utils.c \
### 	 ../../routing.c ../../magma_flare_internals.c ../../acl.c ../../magma_flare.c ../../net_layer.c\
### 	../../vulcano.c ../../protocol.c ../../protocol_pkt.c ../../protocol_console.c \
### 	../../protocol_flare.c ../../protocol_node.c ../../balance.c
### add_remove_CFLAGS = -DMAGMA_SERVER_NODE -DINCLUDE_FLARE_INTERNALS $(GLIB_CFLAGS) 
### add_remove_LDADD = -lm $(GLIB_LIBS)
